--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pip~=23.0.1
-numpy~=1.21.2
-streamlit~=0.87.0
+pip==23.0.1
+numpy==1.21.2
+streamlit==0.87.0
 keras~=2.4.3
-opencv-contrib-python-headless
 tensorflow-cpu
 streamlit_webrtc
