--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 pip==23.0.1
-numpy==1.24.2
-streamlit==0.87.0
-keras~=2.4.3
+
+
+tensorflow==2.11.0
 tensorflow-cpu
 streamlit_webrtc
+
+numpy==1.21.4
+streamlit==1.2.0
+
