--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-pip==23.0.1
-
-
-tensorflow==2.11.0
-tensorflow-cpu
-streamlit_webrtc
-
-numpy==1.21.4
-streamlit==1.2.0
-
-transformers==2.1.0
+sentencepiece==0.1.96
+streamlit==1.9.0
+tensorflow==2.8.0
+transformers
